# camp-vraper

./: .gitignore  README.md  pyproject.toml  requirements.txt  runner.py  scraper.py  temp.json  trial-scraper.txt
course/: items.py  middlewares.py  pipelines.py  settings.py  utils.py
course/spiders/: chapter_catalogue.py  course_catalogue.py  datacamp.py  downloader.py  materials_catalogue.py  subtitle_catalogue.py  transcript_catalogue.py  video_catalogue.py
course/static/: README.md
data/: README.md
